--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <title>TravelDB</title>
   </head>
   <body>
-    <div id="app" class="bg-light"></div>
+    <div id="app" class=""></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
